--- a/src/page/Home/style.scss
+++ b/src/page/Home/style.scss
@@ -49,48 +49,53 @@
         font-size: 60px;
       }
       }
-      .content-detail {
-        font-size: 22px;
-        font-weight: 600;
-        line-height: 33px;
-      }
-      .text-button-group {
+      .content-container {
         display: flex;
-        align-items: center;
-        gap: 56.22px;
-        .join-button {
+        flex-direction: column;
+        row-gap: 30px;
+        .content-detail {
           font-size: 22px;
           font-weight: 600;
           line-height: 33px;
-          width: 385.54px;
-          height: 95.2px;
-          padding: 0px;
-          text-align: center;
-          border-radius: 16px;
-          border: none;
-          background: linear-gradient(to right, rgba(25, 17, 118, 1), rgba(95, 29, 148, 1), rgba(148, 29, 129, 1));
-          color: white;
         }
-        .schedule-button {
-          font-size: 22px;
-          font-weight: 400;
-          line-height: 33px;
-          width: 385.54px;
-          height: 95.2px;
-          padding: 0px;
-          text-align: center;
-          border-radius: 16px;
-          background-color: rgba(255, 255, 255, 0.2);
-          border: 1px solid #ffffff;
-          z-index: 0;
+        .text-button-group {
           display: flex;
           align-items: center;
-          justify-content: center;
-          color: white;
+          gap: 56.22px;
+          .join-button {
+            font-size: 22px;
+            font-weight: 600;
+            line-height: 33px;
+            width: 385.54px;
+            height: 95.2px;
+            padding: 0px;
+            text-align: center;
+            border-radius: 16px;
+            border: none;
+            background: linear-gradient(to right, rgba(25, 17, 118, 1), rgba(95, 29, 148, 1), rgba(148, 29, 129, 1));
+            color: white;
+          }
+          .schedule-button {
+            font-size: 22px;
+            font-weight: 400;
+            line-height: 33px;
+            width: 385.54px;
+            height: 95.2px;
+            padding: 0px;
+            text-align: center;
+            border-radius: 16px;
+            background-color: rgba(255, 255, 255, 0.2);
+            border: 1px solid #ffffff;
+            z-index: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+          }
         }
-      }
-      @media(max-width: 1024px) {
-        width: 100%;
+        @media(max-width: 1024px) {
+          width: 100%;
+        }
       }
     }
     @media(max-width: 1375px) {
@@ -196,9 +201,9 @@
         .nftCircle {
           position: absolute;
           top: 40%;
-          right: 28%;
-          width: 168.25px;
-          height: 168.25px;
+          right: 26.5%;
+          width: 93.21px;
+          height: 93.21px;
           z-index: -1;
           background-color: rgba(53, 102, 225, 1);
           border-radius: 50%;
